# bazel-6526

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  compare_cache_hits.sh  debug_symbols.sh  defs.bzl  test.sh
tools/: BUILD.bazel  Cat.java  version.cpp  version.txt
