load("//:defs.bzl", "bool_flag", "cat", "flag", "flag_cat", "flag_files", "print_version")

bool_flag(
    name = "dbg",
    build_setting_default = False,
)

print_version(
    name = "version",
)

cat(
    name = "cat",
    srcs = [":version"],
    out = "cat.txt",
    string = "simple",
)

flag(
    name = "flag",
    build_setting_default = "default_flag",
    visibility = ["//visibility:public"],
)

flag_cat(
    name = "flag_cat",
    srcs = [":cat"],
    out = "flag_cat.txt",
    string = "with flag",
)

flag_files(
    name = "transition_default",
    srcs = [":flag_cat"],
    flag = "default_flag",
)

flag_files(
    name = "transition_different",
    srcs = [":flag_cat"],
    flag = "different_flag",
)

cat(
    name = "combined",
    srcs = [
        "transition_default",
        "transition_different",
    ],
    out = "combined.txt",
    string = "combined",
)
