java_binary(
    name = "Cat",
    srcs = ["Cat.java"],
    data = ["data.txt"],
    main_class = "tools.Cat",
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/java/runfiles"],
)

cc_binary(
    name = "version",
    srcs = ["version.cpp"],
    data = ["version.txt"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)
